--- a/Public/resume/latex/default.tex
+++ b/Public/resume/latex/default.tex
@@ -109,73 +109,78 @@
 \begin{document}
 
 % Heading
-\documentTitle{\href{https://1md3nd.com}{Anurag Ranjan}}{
-    \href{tel:+918630004742}{\raisebox{-0.15\height} \faMobile\ +91 8630004742} ~ | ~
-    \href{mailto:anurag.ranjan@impressico.com}{\raisebox{-0.15\height} \faEnvelope\ anurag.botmaster@outlook.com} ~ | ~
-    \href{https://linkedin.com/in/1md3nd}{\raisebox{-0.15\height} \faLinkedin\ linkedin.com/in/1md3nd} ~ | ~
-    \href{https://github.com/1md3nd}{\raisebox{-0.15\height} \faGithub\ github.com/1md3nd} 
+\documentTitle{\href{https://www.1md3nd.com}{Anurag Ranjan}}{
+  \href{https://www.1md3nd.com}{\raisebox{-0.15\height} \faGlobe\ 1md3nd.com} ~ | ~
+  \href{tel:+918630004742}{\raisebox{-0.15\height} \faMobile\ +91 8630004742} ~ | ~
+  \href{mailto:anuragr741@gmail.com}{\raisebox{-0.15\height} \faEnvelope\ anuragr741@gmail.com} ~ | ~
+  \href{https://linkedin.com/in/1md3nd}{\raisebox{-0.15\height} \faLinkedin\ linkedin.com/in/1md3nd} ~ | ~
+  \href{https://github.com/1md3nd}{\raisebox{-0.15\height} \faGithub\ github.com/1md3nd}
 }
 
+% Summary
+\tinysection{Summary}
+DevOps Engineer with 1+ years of technical support experience in enterprise environments. Skilled in troubleshooting and debugging technical systems, with expertise in REST APIs, AWS services (S3, CloudWatch, API Gateway), and database operations. Proven track record in operational support, incident management, and scripting automation. Passionate about operational excellence and customer-focused technical innovation.
 
-% Education (Position 1)
+
+\section{Technical Skills}
+\begin{multicols}{2}
+  \begin{itemize}[itemsep=-2px, parsep=1pt, leftmargin=85pt]
+    \item[\textbf{AWS Services}] S3, CloudWatch, API Gateway, Lambda, EC2
+    \item[\textbf{Programming}] Python, Shell/Bash Scripting, Node.js
+    \item[\textbf{APIs \& Debug}] REST APIs, Postman, Error Code Analysis
+    \item[\textbf{Databases}] MySQL, MongoDB, Query Optimization
+    \item[\textbf{DevOps Tools}] Jenkins, Docker, Kubernetes, Terraform
+    \item[\textbf{Monitoring}] CloudWatch Metrics, Prometheus, Grafana
+  \end{itemize}
+\end{multicols}
+
+% Professional Experience
+\section{Professional Experience}
+
+\headingBf{\href{https://www.impressico.com}{Impressico Business Solutions}}{Jan 2024 -- Present}  
+\headingIt{Associate DevOps Engineer }{Noida, India}  
+\begin{resume_list}  
+  \item Provided \textbf{\color{accentTitle}{technical support}} for 10+ customer-facing applications, resolving 95\% of issues within SLA
+ \item Troubleshot and debugged technical issues involving \textbf{\color{accentTitle}{Kubernetes, OpenSearch}}, analyzing logs, error codes, and exceptions
+  \item Implemented monitoring solutions using \textbf{\color{accentTitle}{CloudWatch}} and custom health metrics for proactive issue detection
+  \item Automated operational tasks using \textbf{\color{accentTitle}{Python and Shell scripts}}, saving 15 hours/week of manual work
+  \item Worked with \textbf{\color{accentTitle}{AWS services}} including S3 for log storage, API Gateway for service integration, and CloudWatch for monitoring
+ \item Automated \textbf{\color{accentTitle}{EKS cluster and Jenkins upgrades}}, reducing manual effort by 80\% and minimizing downtime
+\end{resume_list}
+
+
+\headingBf{\href{https://www.healthcart.com}{HealthKart}}{Jan 2023 -- July 2023} 
+\headingIt{\href {https://drive.google.com/file/d/1Iz83NKtrG7A1KG_rK0P8s_sAquzRm_OY/view?usp=sharing}{Software Development Engineer Intern}}{}
+\begin{resume_list}
+  \item Supported the development and testing of RESTful APIs, improving back-end functionality.
+  \item Collaborated with team members during debugging and troubleshooting sessions to improve system reliability.  
+  \item Participated in code reviews and team meetings to understand project workflows and improve coding standards.  
+\end{resume_list}
+
+
+% Education
 \section{Education}
 
 \headingBf{KIET Group of Institutions}{2019 -- 2023}
 \headingIt{Bachelor of Technology in Information Technology}{CGPA: 8.14}
 
-% Work (Position 2)
-\section{Work}
-
-\headingBf{ \href{https://www.impressico.com}{Impressico Business Solutions}}{Jan 2024 -- Present}  
-\headingIt{DevOps Trainee Engineer}{}
-\begin{resume_list}  
-  \item \textbf{Tech Stack:} AWS, Terraform, CloudFormation, Jenkins, Docker, Kubernetes, Prometheus, Grafana
-  \item Engineered \textbf{\color{accentTitle}{CI/CD pipelines}} to streamline deployments and accelerate releases.
-  \item Automated \textbf{\color{accentTitle}{infrastructure provisioning}} with Terraform \& CloudFormation, reducing manual intervention.
-  \item Deployed \textbf{\color{accentTitle}{monitoring solutions}} with Prometheus and Grafana for high availability.
-  \item Collaborated with teams to quickly \textbf{\color{accentTitle}{diagnose and resolve}} deployment issues.
-  \item Conducted RCA to implement \textbf{\color{accentTitle}{proactive measures}} and boost system stability.
-\end{resume_list}
-
-\headingBf{\href{https://www.healthcart.com}{HealthKart}}{Jan 2023 -- July 2023} 
-\headingIt{Software Development Engineer Intern \href{https://drive.google.com/file/d/1Iz83NKtrG7A1KG_rK0P8s_sAquzRm_OY/view?usp=sharing}{\small\textit{\color{gray}{Link}}}}{}
-\begin{resume_list}
-  \item \textbf{Tech Stack:} Node.js, Express, RESTful APIs, Postman
-  \item Developed and rigorously tested \textbf{\color{accentTitle}{RESTful APIs}} to improve backend performance.
-  \item Collaborated in agile teams to \textbf{\color{accentTitle}{debug and resolve}} critical issues.
-  \item Participated in code reviews to uphold coding standards.
-\end{resume_list}
-
-% Skills (Position 3)
-\section{Skills}
-\begin{multicols}{2}
-  \begin{itemize}[itemsep=-2px, parsep=1pt, leftmargin=75pt]
-    \item[\textbf{Programming}] Python, Shell Scripting, Node.js
-    \item[\textbf{Cloud}] AWS, CloudFormation
-    \item[\textbf{DevOps}] Jenkins, Prometheus, Grafana
-    \item[\textbf{Containers}] Docker, Kubernetes
-    \item[\textbf{Databases}] MySQL, MongoDB, Elasticsearch
-    \item[\textbf{Tools}] Terraform, Ansible
-  \end{itemize}
-\end{multicols}
-
 % Projects (Position 4)
-\section{Projects}
+\section{Key Projects}
 
-\headingBf{Kubernetes The Hard Way \href{https://github.com/1md3nd/kubernetes}{\small\textit{\color{gray}{Link}}}}{}
+\headingBf{Serverless Full-Stack Portfolio with Automated DevOps Lifecycle \href{https://github.com/1md3nd/portfolio}{\small\textit{\color{gray}{[GitHub]}}}}{}
 \begin{resume_list}
-  \item \textbf{Tech Stack:} Kubernetes, Shell scripting, Virtual Machine 
-  \item Architected and deployed Kubernetes clusters from cratch, adhering to industry best practices.
-  \item Gained advanced expertise in \textbf{\color{accentTitle}{cluster management, scaling, and security configurations}}.
+\item Architected serverless app using AWS Lambda, API Gateway, DynamoDB achieving \textbf{\color{accentTitle}{99.99\% uptime}}
+\item Implemented CI/CD pipeline with GitHub Actions, reducing deployment time by \textbf{\color{accentTitle}{80\% (30min to 6min)}}
+\item Optimized React.js frontend with CDN caching, improving page load speed by \textbf{\color{accentTitle}{65\%}}
+\item Reduced monthly infrastructure costs by \textbf{\color{accentTitle}{75\%}} using serverless vs traditional EC2
 \end{resume_list}
 
-\headingBf{Serverless Full-Stack Portfolio with Automated DevOps Lifecycle \href{https://github.com/1md3nd/portfolio}{\small\textit{\color{gray}{Link}}}}{}
+\headingBf{EKS Cluster Automation and Jenkins Migration}{Impressico Business Solutions}
 \begin{resume_list}
-  \item \textbf{Tech Stack:} AWS (S3, CloudFront, Lambda, API Gateway, DynamoDB), React.js, GitHub Actions, CloudFormation 
-  \item Architected and deployed a dynamic, serverless portfolio website ensuring high scalability and \textbf{\color{accentTitle}{99.99\% uptime}}.
-  \item Developed a CI/CD pipeline with GitHub Actions and CloudFormation, reducing deployment time by \textbf{\color{accentTitle}{50\%}}.
-  \item Built a responsive React.js front-end to enhance user engagement and performance.
-  \item Optimized infrastructure costs and performance using AWS best practices.
+\item Automated EKS cluster provisioning and Jenkins upgrade process, reducing manual effort by \textbf{\color{accentTitle}{80\%}}
+\item Migrated 50+ microservices to containerized environment with zero downtime deployment
+\item Implemented Infrastructure as Code using Cloudformation for \textbf{\color{accentTitle}{reproducible environments}}
+\item Created automated rollback mechanisms ensuring \textbf{\color{accentTitle}{99.9\% deployment success rate}}
 \end{resume_list}
 
 % Achievements (Position 5)
@@ -187,7 +192,7 @@
 
 \headingBf{Leetcode Success \href{https://www.leetcode.com/1md3nd}{\small\textit{\color{gray}{Link}}}}{}
 \begin{resume_list}
-  \item \textbf{\color{accentTitle}{Solved over 700 algorithm problems}}, demonstrating strong problem solving skills and dedication.
+  \item \textbf{\color{accentTitle}{Solved over 750 algorithm problems}}, demonstrating strong problem solving skills and dedication.
 \end{resume_list}
 
 \headingBf{Postman API Student Expert}{}
